WorkList 1. MealList    - 서버에서 이미지 받아오기(Kingfisher) 2. MealDetailImageCell 뷰 수정    - 서버에서 이미지 받아오기(Kingfisher)    - UIImageView 내부 스크롤 처리 3. 기타 작업    - 사업자 등록증 인증 멘트 색 변경    - print("\(indexPath)가 선택!") 주석

--- a/JJam/Podfile
+++ b/JJam/Podfile
@@ -3,5 +3,6 @@ target 'JJam' do
   pod 'Alamofire', '~> 4.3'
   pod ‘ObjectMapper’, '~> 2.2’ 
   pod ‘SnapKit’, '~> 3.2’ 
+  pod ‘Kingfisher’, '~> 3.5’ 
 end
 use_frameworks!
