--- a/JJam/Podfile
+++ b/JJam/Podfile
@@ -5,5 +5,6 @@ target 'JJam' do
   pod ‘SnapKit’, '~> 3.2’ 
   pod ‘Kingfisher’, '~> 3.5’
   pod 'SwiftyHash', '~> 0.7'
+  pod 'DownPicker'
 end
 use_frameworks!
