WorkList 1. AdMob 배너 광고 처리 - 즐겨 찾기 식당 목록 - 식단 목록 - 식당 찾기
2. AdMob 전면 광고 처리
- 상세 식단

--- a/JJam/Podfile
+++ b/JJam/Podfile
@@ -6,5 +6,6 @@ target 'JJam' do
   pod ‘Kingfisher’, '~> 3.5’
   pod 'SwiftyHash', '~> 0.7'
   pod 'DownPicker'
+  pod 'Google-Mobile-Ads-SDK'
 end
 use_frameworks!
