--- a/JJam/JJam/Supporting Files/Info.plist
+++ b/JJam/JJam/Supporting Files/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>ko_KR</string>
 	<key>CFBundleDisplayName</key>
 	<string>오늘 뭐야?</string>
 	<key>CFBundleExecutable</key>
@@ -16,12 +16,16 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.001</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.003</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>촬영된 이미지로 회원가입 또는 음식 사진을 업로드합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>앨범</string>
+	<string>사진첩의 이미지로 회원가입 또는 음식 사진을 업로드합니다.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
